--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "autoprefixer": "^10.4.21",
