--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "embla-carousel-react": "^8.6.0",
     "i18next": "^25.1.2",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "motion": "^12.17.0",
     "next-themes": "^0.4.6",
@@ -50,6 +51,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
     "react-i18next": "^15.5.1",
+    "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.9",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.5.3",
