--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.2",
     "esbuild": "0.25.4",
     "esbuild-style-plugin": "^1.6.3",
     "postcss": "^8.5.3",
